<resources>
    <string name="app_name">Liga</string>
    <string name="bg_content_description">Background</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="default_name">The Dev Gang</string>
    <string name="default_city">CDMX</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_live_matches">Live matches</string>
    <string name="menu_players">Players</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_messages">Messages</string>

    <string name="default_board">0 : 0</string>
    <string name="default_hometeam_name">Home</string>
    <string name="default_hometeam_city">Home City</string>
    <string name="default_visitorteam_name">Away</string>
    <string name="default_visitorteam_city">Away City</string>

    <string name="lineups_caption">Lineups</string>
    <string name="goals_caption">Goals</string>
</resources>
