<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_players"
        android:title="@string/menu_players" />

    <item
        android:id="@+id/nav_teams"
        android:title="@string/menu_teams" />

    <item
        android:id="@+id/nav_messages"
        android:title="@string/menu_messages" />

    <item
        android:id="@+id/nav_matches"
        android:title="@string/menu_matches">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_upcoming"
                    android:title="@string/menu_upcoming" />
                <item android:id="@+id/nav_live_matches"
                    android:title="@string/menu_live_matches" />
            </group>
        </menu>
    </item>

</menu>