<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_visitorteam_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageView
                android:id="@+id/iv_hometeam_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <TextView
                android:id="@+id/txt_goal_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="121dp"
                android:background="@drawable/bordered_frame"
                android:fontFamily="@font/roboto_black"
                android:padding="10dp"
                android:text="@string/default_board"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_visitorteam_logo"
                app:layout_constraintStart_toEndOf="@+id/iv_hometeam_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_hometeam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/default_hometeam_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_hometeam_logo" />

            <TextView
                android:id="@+id/txt_visitorteam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/default_visitorteam_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_visitorteam_logo" />

            <TextView
                android:id="@+id/txt_hometeam_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_hometeam_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_hometeam_name" />

            <TextView
                android:id="@+id/txt_visitorteam_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/default_visitorteam_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_visitorteam_name" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_hometeam_city">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_lineups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lineups_caption"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_goals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goals_caption"
                        android:textAllCaps="false" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>